<resources>
    <string name="app_name">PaySmart!</string>
    <string name="app_login">Login</string>
    <string name="app_pay_result">Payment Result</string>
    <string name="hint_email">Email</string>
    <string name="hint_name_company">Enter Name</string>
    <string name="hint_amount">Enter Amount $</string>
    <string name="hint_label_pwd">Password</string>
    <string name="cb_remember_me">Remember Email </string>
    <string name="bt_login">LOGIN</string>
    <string name="bt_pay">PAY</string>
    <string name="bt_pay_stripe">STRIPE PAY</string>
    <string name="login_error">Wrong Login Information, Try Again!</string>
    <string name="login_user_error">Enter Email</string>
    <string name="login_pwd_error">Enter Password</string>
    <string name="pay_name_error">Enter Name</string>
    <string name="welcome_msg">Welcome</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="endingIn">Card ending in </string>
    <string name="expDate">MM/YYYY</string>
    <string name="cardNumber">Card Number</string>
    <string name="cvc">CVC</string>
    <string name="ok">OK</string>
    <string name="cardNumber_error">Enter Card Number</string>
    <string name="expDate_error">Enter Expiration Date</string>
    <string name="cvc_error">Enter CVC</string>
    <string name="amount_error">Enter Amount</string>
    <string name="success_msg">Your Payment has been processed via Stripe!</string>
    <string name="bt_done">DONE</string>
    <string name="app_pay">Pay Invoice</string>
</resources>
