<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/five_dp"
    app:cardElevation="@dimen/twenty_four_dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:hint="@string/cardNumber"
            android:inputType="number"
            android:nextFocusDown="@+id/expMonth"
            android:nextFocusForward="@+id/expMonth"
            android:nextFocusRight="@+id/expMonth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/expMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/five_dp"
                android:layout_weight="0.50"
                android:hint="@string/expDate"
                android:inputType="number"
                android:nextFocusForward="@+id/expYear" />

            <EditText
                android:id="@+id/cvc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:layout_weight="0.50"
                android:hint="@string/cvc"
                android:inputType="number"
                android:nextFocusForward="@+id/save" />

        </LinearLayout>

        <Button
            android:id="@+id/paystripe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/bt_pay_stripe" />

    </LinearLayout>
</android.support.v7.widget.CardView>