<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/five_dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/fifteen_sp" />

        <ImageView
            android:id="@+id/ivInvoice"
            android:layout_width="@dimen/two_fifty_dp"
            android:layout_height="@dimen/three_fifty_dp"
            android:layout_below="@id/tv_welcome"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/invoice_2" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivInvoice"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/twenty_four_dp" />

        <Button
            android:id="@+id/btPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAmount"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@color/colorAccent"
            android:text="@string/bt_pay"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>